[project]
name = "timetravel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "loguru",
    "pydantic>=2",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = ["ruff", "pyright", "pytest", "pytest-asyncio", "pytest-cov"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
strict = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
